# personal-ChatGPT

./: README.md  app.py  pyproject.toml
pages/: libran_GPT.py
src/: pdf_downloader.py
